@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-13T16:33:29Z",
-  "count_outdated" : 2491,
-  "uniques_outdated" : 638,
-  "count" : 2520,
+  "timestamp" : "2022-10-14T02:23:39Z",
+  "count_outdated" : 2495,
+  "uniques_outdated" : 639,
+  "count" : 2523,
   "uniques" : 656,
   "clones" : [
-    {
-      "timestamp": "2022-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 2,
